--- a/cloudmart-frontend.yaml
+++ b/cloudmart-frontend.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: cloudmart-pod-execution-role
       containers:
       - name: cloudmart-frontend-app
-        image: public.ecr.aws/n4k4x1e5/cloudmart-frontend
+        image: CONTAINER_IMAGE
 ---
 
 apiVersion: v1
